# infinite-chess

./: CMakeLists.txt  README.md
src/: main.cpp
src/Board/: board.cpp  board.hpp  boardSprite.cpp  boardSprite.hpp  boardTexture.cpp  boardTexture.hpp
src/Game/: callback.cpp  camera.hpp  drawable.hpp  game.cpp  game.hpp  window.cpp  window.hpp
src/Piece/: pawn.cpp  pawn.hpp  piece.cpp  piece.hpp
src/Piece/white/: pawn.cpp  pawn.hpp
